# EGX-ToolKit

./: AppPlan.md  EGX.csv  EGXDetails.csv  FLAGS.md  INDEX.md  MANIFEST.in  NoteBook1.ipynb  NoteBook2.ipynb  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  analysis.py  app.py  config.py  dashboard.py  data_fetcher.py  database.py  latest.csv  pyproject.toml  requirements.txt  strategies.py  symbol_sync.py
data/: egx_symbols.csv  egx_symbols.tv_report.json  stocks.duckdb.snapshot
egx_toolkit/: __init__.py  cli.py
scripts/: update_egx_symbols.py
